--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
     <link rel="stylesheet" type="text/css">
 </head>
 <body>
-    <form method="post">
-    <input type="number" name="name" placeholder="poné tu nota">
-    <input type="submit" name="register">
-    
-    
+
+<form method="post">
+  Name: <input type="text" name="text" /> 
+  <input type="submit" name="submit" value="enviar texto" />
+  <input type="submit" name="reinicio" value="reiniciar">
+  <input type="submit" name="mostrar" value="mostrar">
+
 </form>
 <?php
 include("index.php");
